<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="5.0dip" android:layout_marginVertical="5.0dip">
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@id/ntfBtnHome" android:text="@string/btn_home" style="@style/notification_button_style" />
		<Button android:id="@id/ntfBtnUp" android:text="@string/btn_up" style="@style/notification_button_style" />
		<Button android:id="@id/ntfBtnVolInc" android:text="@string/btn_vol_up" style="@style/notification_button_style" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@id/ntfBtnLeft" android:text="@string/btn_left" style="@style/notification_button_style" />
		<Button android:id="@id/ntfBtnMiddle" android:text="@string/btn_middle" style="@style/notification_button_style" />
		<Button android:id="@id/ntfBtnRight" android:text="@string/btn_right" style="@style/notification_button_style" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@id/ntfBtnBack" android:text="@string/btn_back" style="@style/notification_button_style" />
		<Button android:id="@id/ntfBtnDown" android:text="@string/btn_down" style="@style/notification_button_style" />
		<Button android:id="@id/ntfBtnVolDec" android:text="@string/btn_vol_down" style="@style/notification_button_style" />
	</LinearLayout>
</LinearLayout>
